--- a/x360ce.Engine/Resources/Icons/NavActive.xaml
+++ b/x360ce.Engine/Resources/Icons/NavActive.xaml
@@ -1,6 +1,90 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Viewbox x:Key="NavUpActive" x:Shared="False" Stretch="Uniform">
+    <SolidColorBrush x:Key="ColorActive" Color="#FF00C000" />
+
+    <!--  Axis  -->
+    <Style x:Key="AxisActive" TargetType="Path">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Data" Value="M 192,476 V 320 H 36 V 192 H 192 V 36 H 320 V 192 H 476 V 320 H 320 v 156 z" />
+        <Setter Property="Fill" Value="{StaticResource ColorActive}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="IsHitTestVisible" Value="False" />
+    </Style>
+
+    <!--  Trigger  -->
+    <Style x:Key="TriggerActive" TargetType="Rectangle">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="256" />
+        <Setter Property="Fill" Value="{StaticResource ColorActive}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="IsHitTestVisible" Value="False" />
+    </Style>
+
+    <!--  Circle  -->
+    <!--<Style x:Key="CircleActive" TargetType="Ellipse">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Fill" Value="{StaticResource ColorActive}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+    </Style>-->
+
+    <!--  Border  -->
+    <Style x:Key="BorderActive" TargetType="Border">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Background" Value="{StaticResource NavColorActive}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="CornerRadius" Value="256" />
+    </Style>
+
+    <!--  Arrow Up  -->
+    <Style x:Key="ArrowActive" TargetType="Path">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Data" Value="M 307,410 H 205 V 225 H 116 L 256,85 396,225 h -89 z" />
+        <Setter Property="Fill" Value="White" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="IsHitTestVisible" Value="False" />
+    </Style>
+
+    <Border x:Key="NavTriggerActive" x:Shared="False" Style="{StaticResource BorderActive}" />
+
+    <Border x:Key="NavAxisActive" x:Shared="False" Style="{StaticResource BorderActive}">
+        <Path Style="{StaticResource AxisActive}" />
+    </Border>
+
+    <Border x:Key="NavActive" x:Shared="False" Style="{StaticResource BorderActive}" />
+
+    <Border x:Key="NavUpActive" x:Shared="False" Style="{StaticResource BorderActive}">
+        <Path Style="{StaticResource ArrowActive}" />
+    </Border>
+
+    <Border x:Key="NavDownActive" x:Shared="False" Style="{StaticResource BorderActive}">
+        <Path Style="{StaticResource ArrowActive}">
+            <Path.RenderTransform>
+                <RotateTransform Angle="180" />
+            </Path.RenderTransform>
+        </Path>
+    </Border>
+
+    <Border x:Key="NavRightActive" x:Shared="False" Style="{StaticResource BorderActive}">
+        <Path Style="{StaticResource ArrowActive}">
+            <Path.RenderTransform>
+                <RotateTransform Angle="90" />
+            </Path.RenderTransform>
+        </Path>
+    </Border>
+
+    <Border x:Key="NavLeftActive" x:Shared="False" Style="{StaticResource BorderActive}">
+        <Path Style="{StaticResource ArrowActive}">
+            <Path.RenderTransform>
+                <RotateTransform Angle="-90" />
+            </Path.RenderTransform>
+        </Path>
+    </Border>
+
+    <!--<Viewbox x:Key="NavUpActive" x:Shared="False" Stretch="Uniform">
         <Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0" />
@@ -16,8 +100,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -59,8 +145,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -92,8 +180,10 @@
                 <TranslateTransform X="0" Y="0" />
             </Canvas.RenderTransform>
             <Canvas.Resources />
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -125,8 +215,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -168,8 +260,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -210,8 +304,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -242,8 +338,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Rectangle
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -254,6 +352,6 @@
                     Fill="{StaticResource color-1}" />
             </Canvas>
         </Canvas>
-    </Viewbox>
+    </Viewbox>-->
 
 </ResourceDictionary>
