--- a/x360ce.Engine/Resources/Icons/NavRecord.xaml
+++ b/x360ce.Engine/Resources/Icons/NavRecord.xaml
@@ -1,6 +1,64 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Viewbox x:Key="NavUpRecord" x:Shared="False" Stretch="Uniform">
+    <SolidColorBrush x:Key="ColorRecord" Color="#FFC00000" />
+
+    <!--  Circle  -->
+    <!--<Style x:Key="CircleRecord" TargetType="Ellipse">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Fill" Value="{StaticResource ColorRecord}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+    </Style>-->
+
+    <!--  Border  -->
+    <Style x:Key="BorderRecord" TargetType="Border">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Background" Value="{StaticResource NavColorRecord}" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+        <Setter Property="CornerRadius" Value="256" />
+    </Style>
+
+    <!--  Arrow Up  -->
+    <Style x:Key="ArrowRecord" TargetType="Path">
+        <Setter Property="Width" Value="512" />
+        <Setter Property="Height" Value="512" />
+        <Setter Property="Data" Value="M 307,410 H 205 V 225 H 116 L 256,85 396,225 h -89 z" />
+        <Setter Property="Fill" Value="White" />
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+    </Style>
+
+    <Border x:Key="NavRecord" x:Shared="False" Style="{StaticResource BorderRecord}" />
+
+    <Border x:Key="NavUpRecord" x:Shared="False" Style="{StaticResource BorderRecord}">
+        <Path Style="{StaticResource ArrowRecord}" />
+    </Border>
+
+    <Border x:Key="NavDownRecord" x:Shared="False" Style="{StaticResource BorderRecord}">
+        <Path Style="{StaticResource ArrowRecord}">
+            <Path.RenderTransform>
+                <RotateTransform Angle="180" />
+            </Path.RenderTransform>
+        </Path>
+    </Border>
+
+    <Border x:Key="NavRightRecord" x:Shared="False" Style="{StaticResource BorderRecord}">
+        <Path Style="{StaticResource ArrowRecord}">
+            <Path.RenderTransform>
+                <RotateTransform Angle="90" />
+            </Path.RenderTransform>
+        </Path>
+    </Border>
+
+    <Border x:Key="NavLeftRecord" x:Shared="False" Style="{StaticResource BorderRecord}">
+        <Path Style="{StaticResource ArrowRecord}">
+            <Path.RenderTransform>
+                <RotateTransform Angle="-90" />
+            </Path.RenderTransform>
+        </Path>
+    </Border>
+
+    <!--<Viewbox x:Key="NavUpRecord" x:Shared="False" Stretch="Uniform">
         <Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
             <Canvas.RenderTransform>
                 <TranslateTransform X="0" Y="0" />
@@ -16,8 +74,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -59,8 +119,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -92,8 +154,10 @@
                 <TranslateTransform X="0" Y="0" />
             </Canvas.RenderTransform>
             <Canvas.Resources />
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -125,8 +189,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -168,8 +234,10 @@
                     </LinearGradientBrush.GradientStops>
                 </LinearGradientBrush>
             </Canvas.Resources>
-            <!--  Unknown tag: metadata  -->
-            <!--  Unknown tag: sodipodi:namedview  -->
+    -->
+    <!--  Unknown tag: metadata  -->
+    <!--  Unknown tag: sodipodi:namedview  -->
+    <!--
             <Canvas>
                 <Path
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -193,6 +261,6 @@
                     StrokeThickness="1" />
             </Canvas>
         </Canvas>
-    </Viewbox>
+    </Viewbox>-->
 
 </ResourceDictionary>
